
	* Integrate listeners into the core.

	* Integrate socks support into listener code. Socks connections 
	  can now be accepted at the same port as other connections.

	* Allow configuring a single listener in ~/.ctrlproxy/config.

	* Several simplifications of the configuration file.

	* Recognize NS as command for NickServ (#145)


Ctrlproxy 3.0.3 2007-07-22

  BUG FIXES

    * Handle 470 response correctly.

	* Recognize supported channel / user modes correctly.
	
	* Properly store topic_set_time and topic_set_by in the 
	  linestack. (#108)

    * Reset idle time when AWAY is used in auto-away (#121)

	* Fix crash when using /CTRLPROXY without arguments

	* Don't update config when we're disconnecting during shutdown. (#113)

	* Handle 354 response correctly. (#134)

    * Handle responses after forced joins correctly. (#125)

	* Handle 250 response correctly. (#138)

	* Handle 263 response correctly. (#135)

    * Handle 330 response correclty. (#137)

	* Handle 403 response correctly when sent in response to a MODE 
	  query. (#139)

	* Fall back to user name if real name is empty. 

	* Handle 479 responses correctly. (#142)

	* Only send PRIVMSG and NOTICE lines during the BACKLOG command. (#143)

    * Support SILENCE without arguments. 

  INTERNALS

    * Use GIOChannels for reading the motd. 
		(patch by Emanuele Giaquinta <e.giaquinta@glauco.it>)

  PORTABILITY
    
    * Include netinet/in.h in src/utils.c and src/network.c. Required 
	  for building on FreeBSD. Reported by underlig.


Ctrlproxy 3.0.2 2007-04-15

  BUG FIXES

    * Support redirecting 396, 318, 437 and 330 replies. (#84)

	* Fixed redirect warnings for 251, 252, 253, 254, 265 and 266.

    * Don't abort when trying to send auto-AWAY while network is 
	  disconnected.

	* Handle CTRLPROXY command without any arguments. (#92)

    * Fixed crash when using SSL support. (#83)

	* Add support for storing topic set time and topic set by nick (#97).

	* Fixed CTCP source reply URL. (#86)
